# pkg/note_v1/api.swagger.json
@@ -75,6 +75,70 @@
         ]
       }
     },
+    "/note/v1/list": {
+      "post": {
+        "operationId": "NoteV1_ListNotesV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/note_v1ListNotesV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "properties": {}
+            }
+          }
+        ],
+        "tags": [
+          "NoteV1"
+        ]
+      }
+    },
+    "/note/v1/multiadd": {
+      "post": {
+        "operationId": "NoteV1_MultiAddNotesV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/note_v1MultiAddNotesV1Request"
+            }
+          }
+        ],
+        "tags": [
+          "NoteV1"
+        ]
+      }
+    },
     "/note/v1/remove": {
       "post": {
         "operationId": "NoteV1_RemoveNoteV1",
@@ -177,6 +241,49 @@
       }
     },
     "note_v1DescribeNoteV1Response": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "user_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "classroom_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "document_id": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "note_v1ListNotesV1Response": {
+      "type": "object",
+      "properties": {
+        "notes": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/note_v1Notes"
+          }
+        }
+      }
+    },
+    "note_v1MultiAddNotesV1Request": {
+      "type": "object",
+      "properties": {
+        "notes": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/note_v1Notes"
+          }
+        }
+      }
+    },
+    "note_v1Notes": {
       "type": "object",
       "properties": {
         "id": {
